--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- Popup window for capturing name and email -->
     <div id="popupForm" class="popup">
         <div class="popup-content">
+            <span class="close-button" onclick="closePopup()">&times;</span> <!-- Close icon -->
             <h2>Sign Up</h2>
             <form id="signupForm" name="popup-signup" method="POST" data-netlify="true">
                 <p>Your email will only be used to notify you when AID8 is ready for action.</p>
@@ -71,46 +72,6 @@
         // Function to close the popup
         function closePopup() {
             document.getElementById('popupForm').style.display = 'none';
-        }
-
-        // Function to handle form submission and show thank you message
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const name = document.getElementById('name').value.trim();
-            const email = document.getElementById('email').value.trim();
-            const errorMessage = document.getElementById('errorMessage');
-            const thankYouMessage = document.getElementById('thankYouMessage');
-
-            // Custom validation for name and email
-            if (name === "" || email === "") {
-                errorMessage.style.display = 'block';
-            } else {
-                errorMessage.style.display = 'none';
-
-                // Submit the form via Netlify
-                fetch('/', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                    body: new URLSearchParams(new FormData(event.target)).toString()
-                })
-                .then(() => {
-                    thankYouMessage.style.display = 'block';
-
-                    // Hide the message after 5 seconds, clear form, and close popup
-                    setTimeout(() => {
-                        thankYouMessage.style.display = 'none';
-                        clearForm();
-                        closePopup();
-                    }, 5000);
-                })
-                .catch((error) => console.error('Form submission error:', error));
-            }
-        });
-
-        // Function to clear the form inputs
-        function clearForm() {
-            document.getElementById('signupForm').reset();
         }
 
         // Function to close popup if user clicks outside of it
