Plausible analytics script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             margin: 0;
         }
     </style>
+    <script defer data-domain="aid8.app" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
     <header>
