Updated features section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     
     <section class="features-section">
         <h2>The Art Of The Start</h2>
+        <p>Your challenge begins before the starting line. Selecting the right problem to solve can make or break your startup venture.</p>
         <div class="features-container">
             <!-- Feature 1: Explore -->
             <div class="feature-box">
@@ -82,7 +83,8 @@
                 <p>Craft a viable problem-solution hypothesis and create a compelling elevator pitch.</p>
             </div>
         </div>
-        <h3>Launch your startup on the right foot.</h3>
+        <p>The AI-powered AID8 canvas acts like a mentor on your shoulder in the early ideation stage of your entrepreneurial journey. </p>
+        <h3>Launch your startup on the right foot</h3>
         <button class="cta-button" onclick="openPopup()">Join Waitlist</button>
     </section>
 
