Edits to features copy

--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
             <div class="feature-box">
                 <img src="images/Explore.jpg" alt="Explore Icon" class="feature-icon">
                 <h3>Explore</h3>
-                <p>Scan for relevant problems to solve and evaluate the potential of each opportunity.</p>
+                <p>Scan for relevant problems to solve and evaluate the commercial potential of each opportunity.</p>
             </div>
     
             <!-- Feature 2: Validate -->
             <div class="feature-box">
                 <img src="images/Validate.jpg" alt="Validate Icon" class="feature-icon">
                 <h3>Validate</h3>
-                <p>Map the ecosystem of the selcted problem and device a startegy to validate the opportunity.</p>
+                <p>Map the ecosystem of the selcted problem and formulate a strategy to validate the opportunity.</p>
             </div>
     
             <!-- Feature 3: Define -->
             <div class="feature-box">
                 <img src="images/Define.jpg" alt="Define Icon" class="feature-icon">
                 <h3>Define</h3>
-                <p>Craft a viable problem-solution hypothesis and create a compelling elevator pitch.</p>
+                <p>Craft a viable problem-solution hypothesis and create a compelling elevator pitch for your startup.</p>
             </div>
         </div>
-        <p>The AI-powered AID8 canvas acts like a mentor on your shoulder in the early ideation stage of your entrepreneurial journey. </p>
+        <p>The interactive AID8 canvas serves as a personal mentor guiding you through the early ideation stage of your entrepreneurial journey. </p>
         <h3>Launch your startup on the right foot</h3>
         <button class="cta-button" onclick="openPopup()">Join Waitlist</button>
     </section>
