--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
         <div class="features-container">
             <!-- Feature 1: Explore -->
             <div class="feature-box">
-                <img src="images/Explore.jpg" alt="Explore Icon" class="feature-icon">
+                <img src="images/Explore.png" alt="Explore Icon" class="feature-icon">
                 <h3>Explore</h3>
                 <p>Scan for relevant problems to solve and evaluate the commercial potential of each opportunity.</p>
             </div>
     
             <!-- Feature 2: Validate -->
             <div class="feature-box">
-                <img src="images/Validate.jpg" alt="Validate Icon" class="feature-icon">
+                <img src="images/Validate.png" alt="Validate Icon" class="feature-icon">
                 <h3>Validate</h3>
                 <p>Map the ecosystem of the selcted problem and formulate a strategy to validate the opportunity.</p>
             </div>
     
             <!-- Feature 3: Define -->
             <div class="feature-box">
-                <img src="images/Define.jpg" alt="Define Icon" class="feature-icon">
+                <img src="images/Define.png" alt="Define Icon" class="feature-icon">
                 <h3>Define</h3>
                 <p>Craft a viable problem-solution hypothesis and create a compelling elevator pitch for your startup.</p>
             </div>
