Ready, Set, Go!

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     
     <section class="features-section">
-        <h2>The Art Of The Start</h2>
+        <h2>Ready, Set...</h2>
         <p>Your challenge begins before the starting line. Selecting the right problem to solve can make or break your startup venture.</p>
         <div class="features-container">
             <!-- Feature 1: Explore -->
@@ -84,6 +84,7 @@
             </div>
         </div>
         <p>The interactive AID8 canvas serves as a personal mentor guiding you through the early ideation stage of your entrepreneurial journey. </p>
+        <h2>Go!</h2>
         <h3>Launch your startup on the right foot</h3>
         <button class="cta-button" onclick="openPopup()">Join Waitlist</button>
     </section>
