--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="feature-box">
                 <img src="images/Validate.png" alt="Validate Icon" class="feature-icon">
                 <h3>Validate</h3>
-                <p>Map the ecosystem of the selcted problem and formulate a strategy to validate the opportunity.</p>
+                <p>Map the ecosystem of the selected problem and formulate a strategy to validate the opportunity.</p>
             </div>
     
             <!-- Feature 3: Define -->
