--- a/index.html
+++ b/index.html
@@ -6,23 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AID8 ideation canvas</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Footer styles */
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            font-size: 14px;
-            z-index: 10;
-            box-sizing: border-box;
-            margin: 0;
-        }
-    </style>
+    <!-- Default favicon -->
+    <link rel="icon" href="/images/favicon-16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/favicon-32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/images/favicon-48.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="/images/favicon-180.png" sizes="180x180" type="image/png">
     <script defer data-domain="aid8.app" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
