--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         }
 
         // Function to close popup if user clicks outside of it
-        window.onclick = function(event) {
-            const popup = document.getElementById('popupForm');
-            if (event.target === popup) {
-                closePopup();
-            }
-        }
+        // window.onclick = function(event) {
+        //     const popup = document.getElementById('popupForm');
+        //     if (event.target === popup) {
+        //         closePopup();
+        //     }
+        // }
 
         // Function to close the popup when ESC key is pressed
         document.addEventListener('keydown', function(event) {
